# GCPy

./: .gitignore  Makefile  README.markdown  pyproject.toml  pytest.ini  readme.md  ‎.dockerignore
.github/: Dockerfile  dependabots.yml
.github/workflows/: create-release.yml  docker.yml  generate-docs.yml  plancosts-diff.yml  python.yml
docs/templates/: supported_resources.md
examples/terraform/: data.tf  main.tf
examples/terraform_0_13/: main.tf  plan.json
examples/terraform_0_13/storage/: main.tf
examples/terraform_0_13/web_app/: main.tf
plancosts/: .env  .gitignore  Makefile  ab.json  main.py  requirements.txt  setup.py  test_plan.json  test_plan_dynamodb.json  test_plan_ern.json  test_plan_nil.json  test_plan_rds.json
plancosts/.github/workflows/: plancosts-diff.yml  python.yml
plancosts/examples/terraform/: data.tf  main.tf  plan.json
plancosts/examples/terraform_0_13/: plan.json
plancosts/examples/wip/: main.tf
plancosts/plancosts/: __init__.py  config.py  main.py
plancosts/plancosts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
plancosts/plancosts/base/: costs.py  filters.py  mappings.py  pricecomponent.py  query.py  resource.py
plancosts/plancosts/costs/: breakdown.py  query.py
scripts/: 1.service.sh  2.productFamily.sh  3.attributes-key.sh  4.attributes-value.sh  README.md  get_version.sh  install_provider.sh  requirements.sh
scripts/price_finder/: 1_find_services.sh  2_find_product_families.sh  3_find_attribute_keys.sh  3_find_attribute_keys.sh‎  4_find_attribute_values.sh  5_find_all_attribute_key_values.sh
(+103 files in other folders)
