[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcpy-plancosts"
version = "0.1.0"
description = "GCP cost calculation tool for Terraform plans"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "boto3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.0.260",
    "mypy>=1.0.0",
]

[project.scripts]
plancosts = "main:main"

[tool.setuptools.packages.find]
include = ["plancosts*"]

[tool.setuptools.package-data]
plancosts = ["tests/*.json", "*.json"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["plancosts/tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true